--- a/style.css
+++ b/style.css
@@ -2,12 +2,22 @@ body{
     background: linear-gradient(180deg, black, rgb(0, 0, 85));
 }
 
-#container{
-    display: flex;
+header{
+    color: aliceblue;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 45px;
 }
 
-.coluna{
-    padding: 10px 10px;
+.tudo{
+    padding-left: 20px;
+    
+}
+
+#container{
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
 }
 
 .card{
@@ -17,18 +27,18 @@ body{
     padding: 0;
     transition: all 0.3s;
 }
-
-.card:hover img{
-    height: 320px;
-    width: 230px;
-}
-   
-.card:hover {
-    height: 320px;
-    width: 230px;
+.card:hover{
+    height: 310px;
+    width: 222px;
     box-shadow: 0 0 25px white ;
 }
 
+.card:hover img{
+    height: 310px;
+    width: 222px;
+    box-shadow: 0 0 25px white ;
+}
+   
 h1{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
