--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ header{
 }
 
 .tudo{
-    padding-left: 20px;
-    
+    margin: 0px;
+    padding: 5px;
 }
 
 #container{
@@ -38,7 +38,7 @@ header{
     width: 222px;
     box-shadow: 0 0 25px white ;
 }
-   
+ 
 h1{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
